--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <div id="game">
       <div id="dodger" style="bottom: 0px; left: 180px;"></div>
     </div>
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"> 
-       <script src="index.js">
-     </script>
+   
+       <script src= "index.js"> </script>
      
   </body>
 </html>
