automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
       <div id="dodger" style="bottom: 0px; left: 180px;"></div>
     </div>
    
-       <script src= "index.js"> </script>
+       <script src= "index.js">
+       var dodger = document.getElementById('doger')
+  doger.style.backgroundColor='#FF69B4' </script>
      
   </body>
 </html>
