--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div id="dodger" style="bottom: 0px; left: 180px;"></div>
     </div>
    
-       <script src= "index.js">
+       <script>
        var dodger = document.getElementById('doger')
   doger.style.backgroundColor='#FF69B4' </script>
      
