--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </div>
    
        <script>
-       var dodger = document.getElementById('doger')
+       var dodger = document.getElementById('dodger')
   doger.style.backgroundColor='#FF69B4' </script>
      
   </body>
