--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    
        <script>
        var dodger = document.getElementById('dodger')
-       doger.style.backgroundColor = '#FF69B4' </script>
-     
+       dodger.style.backgroundColor = '#FF69B4' </script>
+       
   </body>
 </html>
