automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        <script>
        var dodger = document.getElementById('dodger')
        dodger.style.backgroundColor = '#FF69B4' </script>
-       dodger.style.left
-       dodger.style.bottom
+       dodger.style.left=
+       dodger.style.bottom = '100px'
   </body>
 </html>
