--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
    
        <script>
        var dodger = document.getElementById('dodger')
-       dodger.style.backgroundColor = '#FF69B4' 
-       dodger.style.left= '0px;
+       dodger.style.backgroundColor = '#FF69B4'; 
+       dodger.style.left= '0px';
        dodger.style.bottom = '100px';
        
        </script>
