--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
         var leftNumbers = dodger.style.left.replace('px', '')
         var left = parseInt(leftNumbers, 10)
         dodger.style.left = `${left - 1}px`
+        function moveDodgerLeft() {
+        var leftNumbers = dodger.style.left.replace('px', '')
+        var left = parseInt(leftNumbers, 10)
+ 
+        if (left > 0) {
+        dodger.style.left = `${left - 1}px`
+  }
+}
   }
 })
        
