--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
   }
 }
        function moveDodgerRight(e){
-         if(e.which ===
+         if(e.which === 39){
+           var leftNumbers = dodger.style.left.replace('px', '')
+        var right=seInt(leftNumbers, 10)
+        dodger.style.right=
+         }
        }
          
        }
